// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavTabCarousel /> with links prop matches with snapshot 1`] = `
<div
  className="sc-fzoLsD kzHVOt"
>
  <div
    className="sc-AxhUy byrsIs"
  >
    <svg
      className="sc-AxjAm iyaRGa sc-AxgMl bAIQAI"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-AxheI WCLFo"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-fzozJi fkodrX"
  >
    <a
      className="sc-AxmLO ldZdaN"
      href="http://www.google.com"
    />
    <a
      className="sc-AxmLO hpujIG"
      href="http://www.cowboybebop.com"
    />
    <a
      className="sc-AxmLO ldZdaN"
      href="http://www.starwars.com"
    />
  </div>
  <div
    className="sc-AxhCb jkcSJn"
  >
    <div
      className="sc-Axmtr kkxSIw"
    >
      Foobar 2
    </div>
    <svg
      className="sc-AxjAm hfhnnP sc-AxgMl bAIQAI"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;

exports[`<NavTabCarousel /> with totalIndex prop matches with snapshot 1`] = `
<div
  className="sc-fzoLsD kzHVOt"
>
  <div
    className="sc-AxhUy byrsIs"
  >
    <svg
      className="sc-AxjAm iyaRGa sc-AxgMl bAIQAI"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-AxheI WCLFo"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-fzozJi fkodrX"
  >
    <div
      className="sc-AxmLO ldZdaN"
    />
    <div
      className="sc-AxmLO hpujIG"
    />
    <div
      className="sc-AxmLO ldZdaN"
    />
  </div>
  <div
    className="sc-AxhCb jkcSJn"
  >
    <div
      className="sc-Axmtr kkxSIw"
    >
      Foobar 2
    </div>
    <svg
      className="sc-AxjAm hfhnnP sc-AxgMl bAIQAI"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;
